enforced a thin client model